[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphic/EnemyHealthBar.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "EnemyHealthBar.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Level" type="Node2D"]
position = Vector2( 10, 10 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 350, 350 )
current = true

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 110, 550 )
left = "a"
right = "d"
up = "w"
down = "s"
shot = "q"
pNum = 1

[node name="Player2" parent="." instance=ExtResource( 2 )]
position = Vector2( 590, 550 )
left = "ui_left"
right = "ui_right"
up = "ui_up"
down = "ui_down"
shot = "ui_select"
pNum = 2

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( -10, -30 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -10, -10 )
tile_set = SubResource( 2 )
cell_size = Vector2( 80, 80 )
collision_layer = 2
collision_mask = 2
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, 65535, 0, 0, 9, 0, 0, 131071, 0, 0, 65545, 0, 0, 196607, 0, 0, 131081, 0, 0, 262143, 0, 0, 196617, 0, 0, 327679, 0, 0, 262153, 0, 0, 393215, 0, 0, 327689, 0, 0, 458751, 0, 0, 393225, 0, 0, 524287, 0, 0, 458761, 0, 0, 589823, 0, 0, 524297, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0 )

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
